<resources>
    <string name="app_name">Koala!</string>
    <string name="orman">ormanfotografi</string>
    <string name="ates">atesfotografi</string>
    <string name="nehir">nehirfotografi</string>
    <string name="ney">neyfotografi</string>
    <string name="a">neyfotografi</string>
    <string name="b">yagmurfotografi</string>
    <string name="c">denizfotografi</string>
    <string name="banner_id">BannerID</string>
    <string name="title_activity_settings">Settings</string>
    <string name="market_donation">Evde yemek de yok sipariş mi versem?</string>
    <string name="meal_donation">Üniversitede yemek mi yesem?</string>
    <string name="tea_donation">Bari bir çay alıp uygulamayı geliştireyim..</string>
    <string name="bes_lira">5₺</string>
    <string name="ikibucuk_lira">2,5₺</string>
    <string name="bir_lira">Reklam İzle</string>
    <string name="donate_aciklama">Reklam izleyerek bana yardımcı olabilirsiniz.</string>
    <string name="ayar1">Reklam İzle</string>
    <string name="ayar2">Reklam İzle</string>
    <string name="version">Version 1.3</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="donate_meal">donate_meal</string>
    <string name="header">header</string>
    <string name="help">help_screen</string>
    <string name="header_icon">header_icon</string>
    <string name="help_screen">help_screen</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="koala_wecome_text">  Koala!</string>
    <string name="welcome_koala">welcome_koala</string>
    <string name="notifity_icon">icon that shown in notification controller</string>
    <string name="header_koala">header koala</string>
</resources>
